maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:26: error: ';' expected but ',' found.
      else{gauche(),avance()}
                   ^